--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ body{
   justify-content:center;
   min-height:100vh;
 }
-
 #container{position:relative;}
-
 canvas{
   width:800px;
   height:450px;
@@ -26,7 +24,6 @@ canvas{
   border-radius:14px;
   box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
-
 .overlay{
   position:absolute;
   inset:0;
@@ -40,7 +37,6 @@ canvas{
   border-radius:14px;
   z-index:5;
 }
-
 button{
   margin-top:12px;
   padding:12px 24px;
@@ -52,17 +48,14 @@ button{
 }
 button:hover{background:#ffc107;}
 .qcm button{width:100%;margin:6px 0;}
-
 #footer{
   margin-top:10px;
   color:white;
   font-weight:bold;
 }
-
 @media (max-width:900px){
   canvas{width:95vw;height:auto;}
 }
-
 #rotateMsg{
   position:fixed;
   inset:0;
@@ -109,15 +102,16 @@ const canvas=document.getElementById("game");
 const ctx=canvas.getContext("2d");
 const rotateMsg=document.getElementById("rotateMsg");
 
-/* ===== GAME ===== */
+/* ===== GAME STATE ===== */
 let state="menu";
 let paused=false;
-let score=0,level=1,speed=3.2,immunity=0;
+let score=0, level=1, speed=3.5, immunity=0;
+
 const groundY=340;
 const player={x:120,y:groundY,r:22,vy:0};
 
 let obstacles=[];
-let lastObstacle=0;
+let lastSpawn=0;
 
 /* ===== QUESTIONS ===== */
 const questions=[
@@ -131,8 +125,7 @@ const questions=[
  {q:"Qu’est-ce qu’un stage ?",c:["Une expérience encadrée","Un emploi à vie","Un loisir"],a:0}
 ];
 
-let questionDeck=[];
-let lastQuestion=null;
+let questionDeck=[], lastQuestion=null;
 
 function shuffleQuestions(){
   questionDeck=[...questions];
@@ -142,13 +135,6 @@ function shuffleQuestions(){
   }
 }
 
-/* ===== BACKGROUND WORDS ===== */
-const bgWords=["CV","Entretien","Projet","Formation","Insertion","Emploi","Compétences","Motivation"];
-const wordPositions=bgWords.map((w,i)=>({
-  x:80+(i%4)*180,
-  y:90+Math.floor(i/4)*140
-}));
-
 /* ===== START ===== */
 document.getElementById("startBtn").onclick=()=>{
   document.getElementById("start").style.display="none";
@@ -157,10 +143,11 @@ document.getElementById("startBtn").onclick=()=>{
 };
 
 function resetGame(){
-  score=0;level=1;speed=3.2;
-  immunity=140;
+  score=0; level=1; speed=3.5;
+  immunity=160;
   obstacles=[];
-  player.y=groundY;player.vy=0;
+  player.y=groundY; player.vy=0;
+  lastSpawn=0;
   shuffleQuestions();
   lastQuestion=null;
 }
@@ -174,27 +161,26 @@ function jump(){
 window.addEventListener("keydown",e=>{if(e.code==="Space")jump();});
 canvas.addEventListener("click",jump);
 
-/* ===== OBSTACLES ===== */
+/* ===== OBSTACLES (FIXED SYSTEM) ===== */
 function spawnObstacle(){
-  const air=level>=2 && Math.random()<0.35;
+  const air = level>=2 && Math.random()<0.35;
   obstacles.push({
-    x:canvas.width+40,
-    y:air?groundY-80-Math.random()*40:groundY+player.r-10,
-    w:26,h:40
+    x:canvas.width+30,
+    y: air ? groundY-80-Math.random()*40 : groundY+player.r-10,
+    w:26,
+    h:40
   });
-  lastObstacle=canvas.width;
 }
 
-/* ===== QUESTION ===== */
+/* ===== QUESTIONS ===== */
 function showQuestion(){
   state="question";
   if(questionDeck.length===0) shuffleQuestions();
   let q=questionDeck.shift();
-  if(lastQuestion && q.q===lastQuestion.q){questionDeck.push(q);q=questionDeck.shift();}
+  if(lastQuestion && q.q===lastQuestion.q){questionDeck.push(q); q=questionDeck.shift();}
   lastQuestion=q;
 
   const answers=q.c.map((t,i)=>({t,ok:i===q.a})).sort(()=>Math.random()-0.5);
-
   const box=document.getElementById("question");
   box.innerHTML=`<h3>${q.q}</h3><div class="qcm"></div>`;
   box.style.display="flex";
@@ -205,7 +191,7 @@ function showQuestion(){
     b.onclick=()=>{
       box.style.display="none";
       if(a.ok){
-        immunity=140;
+        immunity=160;
         obstacles=[];
         state="play";
       }else{
@@ -220,33 +206,28 @@ function showQuestion(){
 /* ===== ORIENTATION ===== */
 function checkOrientation(){
   if(window.innerWidth<900 && window.innerHeight>window.innerWidth){
-    rotateMsg.style.display="flex";paused=true;
+    rotateMsg.style.display="flex"; paused=true;
   }else{
-    rotateMsg.style.display="none";paused=false;
+    rotateMsg.style.display="none"; paused=false;
   }
 }
 window.addEventListener("resize",checkOrientation);
 checkOrientation();
 
 /* ===== LOOP ===== */
-function loop(){
+function loop(timestamp){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  bgWords.forEach((w,i)=>{
-    ctx.globalAlpha=0.15;
-    ctx.fillStyle="#1565c0";
-    ctx.font="22px Arial";
-    ctx.fillText(w,wordPositions[i].x,wordPositions[i].y);
-    ctx.globalAlpha=1;
-  });
 
   if(state==="play" && !paused){
     player.vy+=0.6;
     player.y+=player.vy;
     if(player.y>groundY){player.y=groundY;player.vy=0;}
 
-    if(canvas.width-lastObstacle>200-level*10 && Math.random()<0.03+level*0.005){
+    /* SPAWN REGULIER */
+    const spawnDelay = Math.max(900 - level*80, 420);
+    if(timestamp-lastSpawn > spawnDelay){
       spawnObstacle();
+      lastSpawn = timestamp;
     }
 
     obstacles.forEach(o=>{
@@ -256,40 +237,41 @@ function loop(){
 
       const cx=Math.max(o.x,Math.min(player.x,o.x+o.w));
       const cy=Math.max(o.y,Math.min(player.y,o.y+o.h));
-      const dx=player.x-cx,dy=player.y-cy;
-      if(immunity<=0 && dx*dx+dy*dy<player.r*player.r){
+      const dx=player.x-cx, dy=player.y-cy;
+      if(immunity<=0 && dx*dx+dy*dy < player.r*player.r){
         showQuestion();
       }
     });
 
     obstacles=obstacles.filter(o=>o.x+o.w>0);
     score++;
-    if(score%350===0){level++;speed+=0.3;}
+    if(score%300===0){level++; speed+=0.25;}
     if(immunity>0) immunity--;
   }
 
+  /* PLAYER */
   ctx.beginPath();
   ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-  ctx.fillStyle="#ffb300";
-  ctx.fill();
-  ctx.strokeStyle="#1565c0";
-  ctx.lineWidth=4;
-  ctx.stroke();
+  ctx.fillStyle="#ffb300"; ctx.fill();
+  ctx.strokeStyle="#1565c0"; ctx.lineWidth=4; ctx.stroke();
   ctx.fillStyle="#0d47a1";
   ctx.font="12px Arial";
   ctx.textAlign="center";
   ctx.textBaseline="middle";
   ctx.fillText("MLE",player.x,player.y);
 
+  /* HUD */
   ctx.textAlign="left";
+  ctx.font="14px Arial";
   ctx.fillText("Score : "+score,10,25);
   ctx.fillText("Niveau : "+level,10,45);
   if(immunity>0) ctx.fillText("Immunité",10,65);
 
   requestAnimationFrame(loop);
 }
-loop();
+requestAnimationFrame(loop);
 </script>
 
 </body>
 </html>
+
